# ndarray-sgx

./: Cargo.toml
.github/: pull.yml
src/: array_serde.rs  arraytraits.rs  data_traits.rs  free_functions.rs  impl_1d.rs  impl_constructors.rs  impl_methods.rs  impl_owned_array.rs  lib.rs  stacking.rs
src/dimension/: conversion.rs  dimension_trait.rs  dynindeximpl.rs
src/extension/: nonnull.rs
src/iterators/: mod.rs
src/linalg/: impl_linalg.rs
src/zip/: mod.rs
